--- a/Swan/Base.lproj/MainMenu.xib
+++ b/Swan/Base.lproj/MainMenu.xib
@@ -867,6 +867,8 @@
                             <outlet property="btnRookW" destination="njg-Xw-NPP" id="VXy-ek-LdR"/>
                             <outlet property="btnSetMode" destination="QZu-zX-0gk" id="tcY-Tf-n96"/>
                             <outlet property="colorWell" destination="VqZ-UR-ffS" id="M1i-v4-jEb"/>
+                            <outlet property="drpBook0" destination="c1X-zt-dOY" id="tB8-Ga-vsP"/>
+                            <outlet property="drpBook1" destination="LRv-37-h9D" id="yfv-tp-Li5"/>
                             <outlet property="drpEngine0" destination="1sG-nB-Kfw" id="W2L-hf-Zu5"/>
                             <outlet property="drpEngine1" destination="zj7-I8-01r" id="Cec-w3-IW4"/>
                             <outlet property="drpGame" destination="69o-Ox-arY" id="ize-wD-nf3"/>
@@ -1156,7 +1158,7 @@
                     <comboBox verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c1X-zt-dOY">
                         <rect key="frame" x="820" y="721" width="128" height="25"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="No Book" drawsBackground="YES" numberOfVisibleItems="5" id="DNT-NP-JG0">
+                        <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="No Book" drawsBackground="YES" numberOfVisibleItems="7" id="DNT-NP-JG0">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1174,7 +1176,7 @@
                     <comboBox verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LRv-37-h9D">
                         <rect key="frame" x="966" y="721" width="129" height="25"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="No Book" drawsBackground="YES" numberOfVisibleItems="5" id="wFe-iJ-Kck">
+                        <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="No Book" drawsBackground="YES" numberOfVisibleItems="7" id="wFe-iJ-Kck">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
